# DisplaceD

./: CMakeLists.txt  DisplaceDeformer.cpp  README.md
archive/build-osx_x86_64/: buildconfig2009  buildconfig2011
archive/build-win_x86_64/: DisplaceDeformer.dsw  DisplaceDeformer.vcxproj  DisplaceDeformer.vcxproj.filters
archive/build_linux-x86_64/: build.sh  compileBuild32_7.0.sh  compileBuild64_2010.sh  compileBuild64_2011.sh  compileBuild64_8.0.sh  compileBuild64_8.5.sh  compileBuild8.0.sh  compileBuild8.5.sh
build-win_x86_64/: DisplaceDeformer.sln  DisplaceDeformer.vcproj
linux/: compile.sh  compileBuild32_2008.sh  compileBuild32_8.5.sh  compileBuild6.5.sh  compileBuild64_2008.sh  compileBuild64_2009.sh
osx/: Makefile  buildconfig2008  buildconfig2010  buildconfig2012
outputs/darwin-x86_64/maya-2008/plug-ins/: DisplaceD.bundle
outputs/darwin-x86_64/maya-2009/plug-ins/: DisplaceD.bundle
outputs/darwin-x86_64/maya-2010/plug-ins/: DisplaceD.bundle
outputs/darwin-x86_64/maya-2011/plug-ins/: DisplaceD.bundle
outputs/osx/2012/: DisplaceDeformer.bundle
outputs/win32/2008/: DisplaceD.mll
outputs/win32/2009/: DisplaceD.mll
outputs/win32/2010/: DisplaceD.mll
outputs/win32/2011/: DisplaceD.mll
outputs/win32/6.5/: DisplaceD.mll
outputs/win32/7.0/: DisplaceD.mll
outputs/win32/8.0/: DisplaceD.mll
outputs/win32/8.5/: DisplaceD.mll
outputs/win64/2010-x64/: DisplaceD.mll
outputs/win64/2011-x64/: DisplaceD.mll
outputs/win64/2014-x64/: DisplaceD.mll
outputs/windows-x86_64/maya-2008/plug-ins/: DisplaceD.mll
outputs/windows-x86_64/maya-2009/plug-ins/: DisplaceD.mll
outputs/windows-x86_64/maya-2013/plug-ins/: DisplaceD.mll
src/: DisplaceDeformer.h  DisplaceDhandle.cpp  DisplaceDhandle.h  PluginMain.cpp
win32/: DisplaceDeformer.sln  DisplaceDeformer.vcproj  backup.bat
win64/: DisplaceDeformer.dsp
